# juce-visual-regressions

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  pyproject.toml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
examples/todo_list/: CMakeLists.txt  conanfile.txt  main.cpp
include/: juce_visual_regressions.h
include/juce_visual_regressions/: juce_visual_regressions.h
src/: SnapshotTester.h  juce_visual_regressions.cpp  main.cpp
src/juce_visual_regressions/: SnapshotTester.cpp  SnapshotTester.h  juce_visual_regressions.h  main.cpp
src/juce_visual_regressions/storybook/api/: StorybookApi.cpp  StorybookApi.h
src/juce_visual_regressions/storybook/model/: StorybookGroup.cpp  StorybookGroup.h  StorybookRegistry.cpp  StorybookRegistry.h  StorybookStory.cpp  StorybookStory.h
src/juce_visual_regressions/storybook/ui/: StorybookApplication.cpp  StorybookApplication.h  StorybookContent.cpp  StorybookContent.h  StorybookSidebar.cpp  StorybookSidebar.h  StorybookWindow.cpp  StorybookWindow.h
src/juce_visual_regressions/storybook/ui/storybook_window/: StorybookWindow.cpp  StorybookWindow.h
src/juce_visual_regressions/storybook/ui/storybook_window/storybook_content/: StorybookContent.cpp  StorybookContent.h
src/juce_visual_regressions/storybook/ui/storybook_window/storybook_content/storybook_sidebar/: StorybookLookAndFeel.cpp  StorybookLookAndFeel.h  StorybookSidebar.cpp  StorybookSidebar.h
src/juce_visual_regressions/storybook/ui/storybook_window/storybook_content/storybook_sidebar/tree_view_story_item/: TreeViewLabel.cpp  TreeViewLabel.h  TreeViewStoryItem.cpp  TreeViewStoryItem.h
src/juce_visual_regressions/storybook/ui/storybook_window/storybook_content/storybook_story_frame/: StorybookStoryFrame.cpp  StorybookStoryFrame.h
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
