[tool.poetry]
name = "juce-visual-regressions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "juce_visual_regressions"}]

[tool.poetry.dependencies]
python = "^3.11"
conan = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
